<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Home Sampler</string>
    <string name="license">Acknowledgements</string>
    <string name="info_title">Acknowledgements</string>

<string name="info_message"><![CDATA[<html>
<p>The SmartHomeSampler app uses code from the following libraries:</p>
<h2 id="-belkin-wemo-sdk-http-developers-belkin-com-wemo-sdk-"><a href="http://developers.belkin.com/wemo/sdk">Belkin Wemo SDK</a></h2>
<p>Please read <a href="http://developers.belkin.com/wemo/sdk">&quot;Terms and conditions of use&quot;</a></p>
<h2 id="-butter-knife-http-jakewharton-github-io-butterknife-"><a href="http://jakewharton.github.io/butterknife/">Butter Knife</a></h2>
<p>Copyright 2013 Jake Wharton</p>
<p>Licensed under the Apache License, Version 2.0 (the &quot;License&quot;);
you may not use this file except in compliance with the License.
You may obtain a copy of the License at</p>
<p><a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a></p>
<p>Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an &quot;AS IS&quot; BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</p>
<h2 id="-connect-sdk-android-https-github-com-connectsdk-connect-sdk-android-"><a href="https://github.com/ConnectSDK/Connect-SDK-Android">Connect-SDK-Android</a></h2>
<p>Copyright (c) 2013-2014 LG Electronics.</p>
<p>Licensed under the Apache License, Version 2.0 (the &quot;License&quot;); you may not use this file except in compliance with the License. You may obtain a copy of the License at</p>
<p><a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a></p>
<p>Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an &quot;AS IS&quot; BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</p>
<h2 id="-nanohttpd-https-github-com-nanohttpd-nanohttpd-"><a href="https://github.com/NanoHttpd/nanohttpd">NanoHttpd</a></h2>
<p>Copyright (c) 2012-2013 by Paul S. Hawke, 2001,2005-2013 by Jarno Elonen, 2010 by Konstantinos Togias All rights reserved.</p>
<p>Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:</p>
<ul>
<li><p>Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.</p>
</li>
<li><p>Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.</p>
</li>
<li><p>Neither the name of the NanoHttpd organization nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.</p>
</li>
</ul>
<p>THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS &quot;AS IS&quot; AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
<h2 id="-philips-hue-http-www-developers-meethue-com-documentation-apple-sdk-"><a href="http://www.developers.meethue.com/documentation/apple-sdk">Philips Hue</a></h2>
<p>Philips releases this SDK with friendly house rules. These friendly house rules are part of a legal framework; this to protect both the developers and hue. The friendly house rules cover e.g. the naming of Philips and of hue which can only be used as a reference (a true and honest statement) and not as a an brand or identity. Also covered is that the hue SDK and API can only be used for hue and for no other application or product. Very common sense friendly rules that are common practice amongst leading brands that have released their SDK’s.</p>
<p>Copyright (c) 2012- 2013, Philips Electronics N.V. All rights reserved.</p>
<p>Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:</p>
<p>Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.</p>
<p>Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.</p>
<p>Neither the name of Philips Electronics N.V. , nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.</p>
<p>THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS&quot;AS IS&quot; AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOTLIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FORA PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER ORCONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, ORPROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OFLIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDINGNEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THISSOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
<h2 id="-picasso-http-square-github-io-picasso-"><a href="http://square.github.io/picasso/">Picasso</a></h2>
<p>Copyright 2013 Square, Inc.</p>
<p>Licensed under the Apache License, Version 2.0 (the &quot;License&quot;);
you may not use this file except in compliance with the License.
You may obtain a copy of the License at</p>
<p><a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a></p>
<p>Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an &quot;AS IS&quot; BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</p>
</html>]]>
</string>

    <string name="say">Say</string>
    <string name="play_scene_1">Play Scene 1</string>
    <string name="play_scene_2">Play Scene 2</string>
    <string name="wake_up">Wake Up</string>
    <string name="stop">Stop</string>
    <string name="disconnect">Disconnect</string>
    <string name="save">Save</string>
    <string name="configure">Configure</string>
    <string name="configure_scene_1">Configure scene 1</string>
    <string name="configure_scene_2">Configure scene 2</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="press_hue_button">Press link button for pairing.</string>
    <string name="no_items">no items</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="smarthome_service_is_working">SmartHome service is working</string>
    <string name="not_configured">Not configured</string>
    <string name="configured">Configured</string>
    <string name="hold">Hold</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="warning">Warning</string>
    <string name="device_will_be_removed_from_scene">This device was selected in another scene and will be removed there because each scene must have unique devices.</string>

</resources>
